[package]
name = "camera_test"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
assets = "assets"
label = "Camera Test"
min_sdk_version = 26

[dependencies]
# macroquad = {path = "../macroquad"}
# macroquad-tiled = {path = "../macroquad/tiled"}
# macroquad-profiler = {path = "../macroquad/profiler"}
macroquad = "0.4"
macroquad-tiled = "0.2"
macroquad-profiler = "0.2"
