[package]
name = "camera_test"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
assets = "assets"
label = "Camera Test"
min_sdk_version = 26

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }

[patch.crates-io]
miniquad = { git = "https://github.com/not-fl3/miniquad.git" }
